css/mediaqueries.css
@-ms-viewport {
  width: device-width;
}

.clearfix {
  *zoom: 1;
}

@media (max-width: 767px) {
  
  body, html {
    width: 100%;
  }
  
  .bookmark {
    display: none !important;
  }
  
  #s1 .window {
    height: 200px;
  }
  
  #s2, #s3, #s6, #s8, #s14 { height: 395px; }
  #s4 { height: 500px; }
  #s5 { height: 284px; }
  #s7, #s10 { display: none; }
  #s9 { height: 784px; }
  #s11 { height: 784px; }
  
  #s11 .timeline { height: 500px; }
  
  
  #s2, #s12, #s13, #s15 { height: 395px; }
  
  .overlay-timeline {
    display: none;
  }
  
  .dark .timeline {
    background: url(../img/ui/timeline.png) repeat-y;
    background-position-y: top;
    background-position-x: 15px;
  }

  .light .timeline {
    background: url(../img/ui/timeline-dark.png) repeat-y;
    background-position-y: top;
    background-position-x: 15px;
  }
  
  .point.right, .point.left {
    margin-left: 18px;
  }
  
  .point.free {
    position: relative;
    width: 150px;
  }
  
  .point .o {
    display: none;
  }

  .point .leash {
    height: 1px;
    width: 30%;
    margin-top: 25px;
  }

  .dark .point .leash {
    background: white;
  }

  .point .leash {
    background: #003c7c;
  }

  .point.left .content, .point.right .content {
    width: 60%;
  }

  .point.free .content {
    width: 100%;
    color: white;
  }

  .dark .point .content {
    border: 1px solid white;
  }

  .light .point .content {
    border: 1px solid #003c7c;
  }

  .point.free .content {
    border: 1px solid white;
  }

  .point.left .leash {
    float: left;
  }

  .point.right .leash {
    float: left;
  }

  .point.left .content {
    float: left;
  }

  .point.right .content {
    float: left;
  }

  .point .content h3 {
    font-size: 15px;
    margin: 0;
    padding: 10px 0 10px 10px;
  }

  .point .content p {
    display: none;
  }
  
  .year {
    font-size: 50px;
  }
  
  .video-embed {
    display: none;
  }
  
  .quote-wrapper {
    height: 284px;
    font-size: 14px;
  }
  
  .quote {
    padding: 30px 0;
  }
  
  .awards {
    width: 290px;
    margin-left: 30px;
    top: 120px;
  }
  
  .awards .graphic {
    display: none;
  }
  
  .awards .award {
    width: 140px;
    height: 140px;
    margin: 0 2.5px 2.5px 0;
  }
  
  .awards .name {
    width: 140px;
    position: relative;
    height: 140px;
  }
  
  .awards .name h3 {
    font-size: 15px;
    position: relative;
    top: 45px;
  }
  
  .awards .label {
    display: none;
  }
  
  .prop img {
    max-width: 250px;
    max-height: 250px;
  }
  
  .bottom-share {
    width: 80%;
    font-size: 20px;
    top: 400px;
  }
  
  .congrats {
    font-size: 20px;
    top: 5600px;
  }
  
  #t1 { top: 2px; }
  #t2 { top: 2px; }
  #t3 { top: 26px; }
  #t4 { top: 51px; }
  #t5 { top: 67px; }
  #t6 { top: 92px; }
  #t7 { top: 120px; }
  #t8 { display: none; }
  #t9 { top: 0; }
  #t10 { top: 157px; }
  #t11 { display: none; }
  #t12 { top: 45px; }
  #t13 { top: 92px; }
  #t14 { top: 139px; }
  #t15 { display: none; }
  #t16 { top: 45px; }
  #t17 { top: 114px; }
  #t18 { top: 9450px; right: 15px; }
  #t19 { top: 88px; }
  #t20 { top: 250px; }
  #t21 { top: 250px; }
  #t22 { top: 44px; }
  #t23 { top: 91px; }
  #t24 { top: 138px; }
  #t25 { top: 150px; }
  
  #p01 { display:none; }
  #p02 { display: none; }
  #p03 { display: none; }
  #p04 { display: none; }
  #p05 { display: none; }
  #p06 { top: 1050px; right: 10px; }
  #p07 { display: none; }
  #p08 { display: none; }
  #p09 { display: none; }
  #p10 { top: 1499px; right: 0; }
  #p11 { display: none; }
  #p12 { top: 2070px; right: 0; }
  #p13 { display: none; }
  #p14 { top: 2302px; right: 0; }
  #p15 { display: none; }
  #p16 { display: none; }
  #p17 { display: none; }
  #p18 { top: 2697px; right: 0; }
  
  #p19 { display: none; }
  #p20 { display: none; }
  #p21 { top: 3366px; right: 0; }
  #p22 { display: none; }
  #p23 { display: none; }
  #p24 { display: none; }
  #p25 { top: 5450px; right: 0; }
  
  #p12 img { height: 150px; }
  #p14 img { height: 125px; }
  #p18 img { height: 125px; }
  #p25 img { width: 150px; }
  
  .linemates { display: none; }
}
/* ... */

